--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,26 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+
+    dependencies {
+        classpath 'gradle.plugin.com.athaydes.gradle.osgi:osgi-run-core:1.3.1'
+    }
+}
+
 apply plugin: "java"
 apply plugin: "osgi"
-
-configurations {
-    felix
-
-    compile.extendsFrom(felix)
-}
+apply plugin: 'com.athaydes.osgi-run'
 
 repositories {
     mavenCentral()
-    ivy {
-        url 'http://apache.mirror.digitalpacific.com.au'
-        layout 'pattern', {
-            artifact '/[organization]/[module]-[revision].[ext]'
-        }
-    }
 }
 
 dependencies {
     compile "org.apache.felix:org.apache.felix.framework:5.4.0"
-    felix 'felix:org.apache.felix.main.distribution:5.4.0:class@zip'
+    osgiRuntime "org.apache.felix:org.apache.felix.configadmin:1.8.8"
 }
 
 jar {
@@ -32,23 +33,6 @@ jar {
     }
 }
 
-task felix(type: Copy, dependsOn: jar) {
-    def felixVersion = (configurations.felix.dependencies.version =~ /\d+\.\d+\.\d+/)[0]
-    def zipPath = configurations.felix[0]
-    def zipFile = file(zipPath)
-    def outDir = "${projectDir}/"
-
-    from zipTree(zipFile)
-    into outDir
-
-    def felixDir = "${outDir}/felix-framework-${felixVersion}"
-
-    def bundle = jar.archivePath
-
-    javaexec {
-        main = "-jar"
-        args "${felixDir}/bin/felix.jar"
-        systemProperty "felix.auto.deploy.dir", "${felixDir}/bundle"
-        systemProperty "felix.auto.deploy.action", "start file:${bundle}"
-    }
+runOsgi {
+    bundles += project
 }
