--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     compile "org.apache.felix:org.apache.felix.framework:5.4.0"
     osgiRuntime "org.apache.felix:org.apache.felix.configadmin:1.8.8"
+    osgiRuntime "org.apache.felix:org.apache.felix.framework:5.4.0"
 }
 
 jar {
@@ -35,4 +36,5 @@ jar {
 
 runOsgi {
     bundles += project
+    osgiMain = "org.apache.felix:org.apache.felix.main:5.4.0"
 }
