--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
+ext.kotlin_version = '1.0.0-beta-4589'
+ext.felix_version = '5.4.0'
+
 buildscript {
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'gradle.plugin.com.athaydes.gradle.osgi:osgi-run-core:1.3.1'
+        classpath 'gradle.plugin.com.athaydes.gradle.osgi:osgi-run-core:1.4.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}'
     }
 }
 
 apply plugin: "java"
-apply plugin: "osgi"
 apply plugin: 'com.athaydes.osgi-run'
 
 repositories {
@@ -19,8 +23,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.apache.felix:org.apache.felix.framework:5.4.0"
-    osgiRuntime "org.apache.felix:org.apache.felix.configadmin:1.8.8"
+    compile "org.apache.felix:org.apache.felix.framework:${felix_version}"
 }
 
 jar {
@@ -35,5 +38,5 @@ jar {
 
 runOsgi {
     bundles += project
-    osgiMain = "org.apache.felix:org.apache.felix.main:5.4.0"
+    osgiMain = "org.apache.felix:org.apache.felix.main:${felix_version}"
 }
