--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
-ext.kotlin_version = '1.0.0-beta-4589'
-ext.felix_version = '5.4.0'
-
 buildscript {
+    ext.kotlin_version = '1.0.0-beta-4589'
+    ext.felix_version = '5.4.0'
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
@@ -11,7 +10,7 @@ buildscript {
 
     dependencies {
         classpath 'gradle.plugin.com.athaydes.gradle.osgi:osgi-run-core:1.4.0'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
     }
 }
 
@@ -23,7 +22,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.apache.felix:org.apache.felix.framework:${felix_version}"
+    compile 'org.osgi:org.osgi.core:5.0.0'
 }
 
 jar {
