--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 apply plugin: "java"
 apply plugin: 'com.athaydes.osgi-run'
+apply plugin: "kotlin"
 
 repositories {
     mavenCentral()
@@ -23,6 +24,7 @@ repositories {
 
 dependencies {
     compile 'org.osgi:org.osgi.core:5.0.0'
+    compile "org.jetbrains.kotlin:kotlin-osgi-bundle:${kotlin_version}"
 }
 
 jar {
